--- a/openglthing.vcxproj.filters
+++ b/openglthing.vcxproj.filters
@@ -68,5 +68,8 @@
     <ClInclude Include="DemoApp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="OpenGLInfo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
